fixed overflow

--- a/src/gantt/assets/css/style.css
+++ b/src/gantt/assets/css/style.css
@@ -9,8 +9,6 @@ body {
 .osome-gantt-grid-container {
     position: absolute;
     width:100%;
-    height:100%;
-    overflow-y:auto;
 }
 
 .osome-gantt-grid-inner-container {
